- Added better navigation system - Added first diagram
Signed-off-by: Josua Frank <jo391fra@htwg-konstanz.de>

--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -13,6 +13,6 @@
         android:layout_margin="25dp"
         android:adjustViewBounds="true"
         app:srcCompat="@drawable/ic_sensors"
-        android:contentDescription="@string/logo_content_description" />
+        android:contentDescription="@string/app_name" />
 
 </LinearLayout>
