--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#e67e22</color>
     <color name="colorPrimaryDark">#d35400</color>
     <color name="colorAccent">#c0392b</color>
+    <color name="colorTemperature">#FF0000</color>
+    <color name="colorTemperature2">#2fFF0000</color>
+    <!--<color name="colorHighlight2">#4285F4</color>-->
+    <!--<color name="colorHighlight3">#F4B400</color>-->
+    <!--<color name="colorHighlight4">#0F9D58</color>-->
 </resources>
