--- a/app/src/main/res/drawable/ic_settings.xml
+++ b/app/src/main/res/drawable/ic_settings.xml
@@ -1,4 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="50"
-    android:viewportWidth="50" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M47.2,21.2l-6,-1a17,17 0,0 0,-1.4 -3.4l3.5,-4.9c0.3,-0.4 0.2,-1 -0.1,-1.2l-4,-4a1,1 0,0 0,-1.2 0L33.2,10c-1.1,-0.6 -2.3,-1 -3.5,-1.4l-1,-5.9a1,1 0,0 0,-1 -0.8h-5.5a1,1 0,0 0,-1 0.8l-1,5.9c-1.1,0.3 -2.3,0.8 -3.4,1.4L12,6.7a1,1 0,0 0,-1.3 0l-3.9,4a1,1 0,0 0,0 1.2l3.3,4.9c-0.6,1 -1,2.2 -1.4,3.5l-5.9,1a1,1 0,0 0,-0.8 1v5.4c0,0.5 0.3,1 0.8,1l5.9,1c0.3,1.2 0.8,2.4 1.4,3.5L6.7,38a1,1 0,0 0,0 1.3l4,3.9c0.3,0.3 0.8,0.4 1.2,0l4.9,-3.3c1,0.6 2.2,1 3.4,1.4l1,5.9c0.1,0.4 0.5,0.8 1,0.8h5.5a1,1 0,0 0,1 -0.8l1,-6c1.2,-0.3 2.4,-0.7 3.5,-1.4l4.9,3.5c0.4,0.3 1,0.2 1.3,-0.1l3.8,-4c0.4,-0.3 0.4,-0.8 0.1,-1.2l-3.5,-4.9c0.6,-1 1.1,-2.2 1.5,-3.4l5.9,-1c0.4,0 0.8,-0.5 0.8,-1v-5.5c0,-0.5 -0.4,-0.9 -0.8,-1zM25,32a7,7 0,1 1,0 -14,7 7,0 0,1 0,14z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="20"
+    android:viewportHeight="20">
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M15.95,10.78a6.53,6.53 0,0 0,-0.01 -1.56l1.69,-1.32a0.41,0.41 0,0 0,0.1 -0.51l-1.6,-2.77c-0.1,-0.18 -0.31,-0.24 -0.49,-0.18l-1.99,0.8a5.86,5.86 0,0 0,-1.35 -0.78L12,2.34a0.4,0.4 0,0 0,-0.4 -0.34H8.4c-0.2,0 -0.36,0.14 -0.39,0.34l-0.3,2.12c-0.49,0.2 -0.94,0.47 -1.35,0.78l-1.99,-0.8a0.4,0.4 0,0 0,-0.49 0.18l-1.6,2.77c-0.1,0.18 -0.06,0.39 0.1,0.51l1.69,1.32a5.03,5.03 0,0 0,-0.01 1.56L2.37,12.1a0.41,0.41 0,0 0,-0.1 0.51l1.6,2.77c0.1,0.18 0.31,0.24 0.49,0.18l1.99,-0.8c0.42,0.32 0.86,0.58 1.35,0.78l0.3,2.12c0.04,0.2 0.2,0.34 0.4,0.34h3.2c0.2,0 0.37,-0.14 0.39,-0.34l0.3,-2.12c0.49,-0.2 0.94,-0.47 1.35,-0.78l1.99,0.8a0.4,0.4 0,0 0,0.49 -0.18l1.6,-2.77a0.39,0.39 0,0 0,-0.1 -0.51l-1.67,-1.32zM10,13c-1.65,0 -3,-1.35 -3,-3s1.35,-3 3,-3 3,1.35 3,3 -1.35,3 -3,3z" />
 </vector>
