--- a/app/src/main/res/drawable/ic_temperature.xml
+++ b/app/src/main/res/drawable/ic_temperature.xml
@@ -1,14 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="82.5"
-    android:viewportHeight="82.5"
-    tools:keep="@drawable/ic_temperature">
+    android:viewportHeight="82.5">
     <path
         android:fillColor="#FF000000"
-        android:pathData="M37.5,0C31.96,0 27.5,4.46 27.5,10L27.5,46.9A20,20 0,0 0,20 62.5,20 20,0 0,0 40,82.5 20,20 0,0 0,60 62.5,20 20,0 0,0 52.5,46.91L52.5,41.9L60,41.9L60,34.4L52.5,34.4L52.5,25.5L60,25.5L60,18L52.5,18L52.5,10C52.5,4.46 48.04,0 42.5,0Z" />
+        android:pathData="M39.0625,5.1565C34.215,5.1565 30.3125,9.059 30.3125,13.9065L30.3125,46.194A17.5,17.5 0,0 0,23.75 59.844,17.5 17.5,0 0,0 41.25,77.344 17.5,17.5 0,0 0,58.75 59.844,17.5 17.5,112.1155 0,0 52.1875,46.2028L52.1875,41.819L58.75,41.819L58.75,35.2565L52.1875,35.2565L52.1875,27.469L58.75,27.469L58.75,20.9065L52.1875,20.9065L52.1875,13.9065C52.1875,9.059 48.285,5.1565 43.4375,5.1565Z" />
     <path
         android:fillColor="#ffffff"
-        android:pathData="m36.25,10.5h7.5L43.75,18h-7.5z" />
+        android:pathData="m37.9688,14.344l6.5625,0L44.5313,20.9065l-6.5625,0z" />
 </vector>
