--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -3,40 +3,47 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HistoryFragment">
+    tools:context=".fragments.HistoryFragment">
 
-    <ScrollView
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <com.jjoe64.graphview.GraphView
-                android:id="@+id/temperatureGraph"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="200dip" />
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-            <com.jjoe64.graphview.GraphView
-                android:id="@+id/lightGraph"
-                android:layout_width="match_parent"
-                android:layout_height="200dip" />
+                <com.jjoe64.graphview.GraphView
+                    android:id="@+id/temperatureGraph"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dip" />
 
-            <com.jjoe64.graphview.GraphView
-                android:id="@+id/humidityGraph"
-                android:layout_width="match_parent"
-                android:layout_height="200dip" />
+                <com.jjoe64.graphview.GraphView
+                    android:id="@+id/lightGraph"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dip" />
 
-            <com.jjoe64.graphview.GraphView
-                android:id="@+id/noiseGraph"
-                android:layout_width="match_parent"
-                android:layout_height="200dip" />
+                <com.jjoe64.graphview.GraphView
+                    android:id="@+id/humidityGraph"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dip" />
+
+                <com.jjoe64.graphview.GraphView
+                    android:id="@+id/noiseGraph"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dip" />
 
 
-        </LinearLayout>
+            </LinearLayout>
 
-    </ScrollView>
+        </ScrollView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </FrameLayout>
