--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -12,7 +12,7 @@
 
         android:layout_margin="25dp"
         android:adjustViewBounds="true"
-        app:srcCompat="@drawable/ic_sensors"
+        app:srcCompat="@drawable/ic_logo"
         android:contentDescription="@string/app_name" />
 
 </LinearLayout>
